--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .marchar{
     color: orange;
 }
-section{
+.upcoming-day{
     display: flex;
     margin-bottom: 150px;
 }
@@ -32,3 +35,34 @@ padding-left: 5%;
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
+.dream-big{
+    background-image: url(images/dream01-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.genius-t{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+}
+.experience-area{
+    background-image: url(images/2022-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#ak-50{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,green);
+    border-image-slice: 1;
+}
+#ak-51{
+    border-left: 7px solid;
+    border-image: linear-gradient(purple,tomato);
+    border-image-slice: 1;
+}  
+footer{
+    text-align: center;
+}  
